[package]
name = "scarlet"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["lib/agent.node"]

[lib]
crate-type = ["cdylib"]
path = "src/agent/lib.rs"

[dependencies]
md-5 = "0.10.5"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "test-util"] }
serde = { version = "1", features = ["derive"] }
once_cell = "1"
digest = { version = "0.10.1" }
url = "2.5.2"
tempfile = "3.10.1"
futures = "0.3.30"
libc = "0.2.155"
serial_test = "3.1.1"
reqwest = { version = "0.11.27", features = ["stream"] }
mockito = "1.4.0"
thiserror = "1.0.61"
lazy_static = "1.5.0"

[dependencies.neon]
version = "1.0.0"
