[package]
name = "scarlet"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["lib/agent.node"]

[lib]
crate-type = ["cdylib"]
path = "src/agent/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "fs", "test-util"] }
tempfile = "3.10.1"
futures = "0.3.30"
reqwest = { version = "^0.12", features = ["stream"] }
thiserror = "1.0.61"
lazy_static = "1.5.0"
sha2 = "0.11.0-pre.3"

[dependencies.neon]
version = "1.0.0"
